updated fade animation, fixed responsive issues on mobile

--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -17,7 +17,11 @@ html {
       .badge {
         svg {
           fill: #fff;
-          height: 300px;
+          width: 25vw;
+          max-width: 200px;
+          // #fade1, #fade2, #fade3, #fade4, #fade5, #fade6, #fade7, #fade8, #fade9, #fade10, #fade11, #fade12, #fade13 {
+          //   display: none;
+          // }
         }
       }
       .linkdin, .instagram {
@@ -91,55 +95,41 @@ html {
       }
     }
     @media only screen 
+      and (max-width: 768px) 
+      and (-webkit-min-device-pixel-ratio: 2) { 
+      section.bio {
+        padding: 4rem;
+      }
+    }
+    @media only screen 
       and (min-width: 320px) 
       and (max-width: 667px) 
       and (-webkit-min-device-pixel-ratio: 2) { 
-      flex-direction: column;
+      display: block;
       section.hero {
         width: 100vw;
+        height: calc(100vh - 100px);
+        .badge {
+          svg {
+            width: 50vw;
+          }
+        }
       }
       section.bio {
         width: 100vw;
+        height: auto;
+        overflow: none;
       }
     }
-    // @media only screen and (max-width: 1200px) {
-    // }
-    // @media only screen and (max-width: 768px) {
-    //   display: inline-flex;
-    //   flex-direction: column;
-    //   section.hero-img {
-    //     height: 40%;
-    //     width: 100vw;
-    //     border: solid .75rem #e9a054;
-    //   }
-    //   section.bio {
-    //     width: 100vw;
-    //     margin-top: 40vh;
-    //     justify-content: flex-start;
-    //     height: 60%;
-    //     padding: 3rem 4rem; 
-    //     h1 {
-    //       font-size: 3rem;
-    //     }
-    //     p {
-    //       max-width: none;
-    //     }
-    //   }
-    // }
-    // @media only screen and (max-width: 578px) {
-    //   section.hero-img {
-    //     border: solid .5rem #e9a054;
-    //   }
-    //   section.social-media {
-    //     padding: 2rem;
-    //   }
-    //   section.bio {
-    //     padding: 2rem;
-    //     h1 {
-    //       font-size: 2.5rem;
-    //       margin-bottom: 1rem;
-    //     }
-    //   }
-    // }
+    @media only screen 
+      and (max-width: 480px) 
+      and (-webkit-min-device-pixel-ratio: 2) { 
+      section.bio {
+        padding: 3rem;
+        img {
+          margin-top: 1rem;
+        }
+      }
+    }
   }
 }
